# python-kustomize

./: .coveragerc  NEWS.rst  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: history.rst  index.rst
kustomize/: generators.py  main.py
newsfragments/: +c4121634.bugfix.rst  1.feature.rst  10.feature.rst
tests/: base.py
tests/fixtures/attrs/python/: deployment.py
tests/fixtures/base_and_overlays/python/base/: deployment.py
tests/fixtures/patchesJson6902/reference/: kustomization.yaml
tests/fixtures/simple_dict_subdirs/python/deployments/: deployment.py
tests/fixtures/to_dict/python/: deployment.py
